fix: corrigidos imports do projeto e implementado autenticação
